<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
        android:gravity="center"
        android:orientation="vertical"
        android:background="#eee" >

        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
            
            <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/find_more_friend_near_icon" />
            
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/smarthouse"
            android:textColor="#000000"
            android:textSize="35sp" />
            
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/author"
            android:textColor="#000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/main_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_green"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:layout_marginTop="15dp"
            android:text="@string/log"
            android:textColor="#ffffff"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/login_des"
            android:textSize="14sp"
            android:textColor="#444" />

        <Button
            android:id="@+id/main_regist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:gravity="center"
            android:text="@string/des"
            android:textSize="14sp"
            android:textColor="#444"  />
    </LinearLayout>