<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" 
    android:gravity="center_horizontal">
    <RelativeLayout 
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar">
        <Button
            android:id="@+id/login_reback_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textSize="14sp"
            android:textColor="#fff"
            android:background="@drawable/title_btn_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/log"
           />
        
    </RelativeLayout>
	<EditText 
	    android:id="@+id/login_user_edit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/login_top_layout"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:singleLine="true"
	    android:background="@drawable/login_editbox"
	    android:hint="@string/log_text"/>
	<EditText 
	    android:id="@+id/login_passwd_edit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/login_user_edit"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@drawable/login_editbox"
	    android:inputType="textPassword"
	    android:singleLine="true"
	    android:hint="@string/passwd"/>
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:id="@+id/check_box"
	    android:layout_below="@+id/login_passwd_edit">
	    <CheckBox 
	        android:id="@+id/cb_passwd"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="23dp"
	        android:text="@string/rem_pass"
	        android:textColor="#00f"/>
	    <CheckBox
	        android:id="@+id/auto_login"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginRight="20dp"
	        android:text="@string/auto_text"
	        android:layout_alignParentRight="true"
	        android:textColor="#00f" />
	    </RelativeLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_below="@+id/check_box"
	    >
	    <Button
	        android:id="@+id/forget_passwd" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="23dp"
	        android:layout_marginTop="5dp"
	        android:text="@string/forget_passwd"
	        android:textSize="16sp"
	        android:textColor="#00f"
	        android:background="#0000"
	        />
	     <Button
	        android:id="@+id/login_login_btn"
	        android:layout_width="90dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="20dp"
	        android:layout_alignParentRight="true"
	        android:text="@string/log"
	        android:background="@drawable/btn_style_green"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        />
	</RelativeLayout>
</RelativeLayout>