<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    >
    <RelativeLayout 
        android:id="@+id/regrist_layout"
        android:layout_height="45dp" 
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar">
        <Button android:id="@+id/regrister_back"
            android:layout_height="wrap_content"
            android:layout_width="70dp" 
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textSize="14sp"
            android:textColor="#fff"
            android:background="@drawable/title_btn_back"/>
        <TextView android:id="@+id/regrister_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="@string/reg"
            android:textColor="#ffffff"/>
    </RelativeLayout>
    <LinearLayout 
        android:layout_height="65dp"
        android:layout_width="fill_parent"
        android:id="@+id/name_layout"
        android:layout_below="@+id/regrist_layout"
        android:orientation="horizontal">
        <TextView
             android:layout_height="wrap_content"
             android:layout_width="60dp"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
             android:text="@string/name"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/black"
             />
        <EditText 
		    android:id="@+id/reg_user_edit"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@color/gray"
		    android:textSize="15sp"
		    android:layout_marginTop="15dp"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:singleLine="true"
		    android:background="@drawable/login_editbox"
		    android:hint="@string/reg_text"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_height="65dp"
        android:layout_width="fill_parent"
        android:id="@+id/pass_layout"
        android:layout_below="@+id/name_layout"
        android:orientation="horizontal">
        <TextView
             android:layout_height="wrap_content"
             android:layout_width="60dp"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
             android:text="@string/passwd"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/black"
             />
        <EditText 
		    android:id="@+id/reg_passwd_edit"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@color/gray"
		    android:textSize="15sp"
		    android:inputType="textPassword"
		    android:layout_marginTop="15dp"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:singleLine="true"
		    android:background="@drawable/login_editbox"
		    android:hint="@string/reg_text"/>
    </LinearLayout>
     <LinearLayout 
        android:layout_height="65dp"
        android:layout_width="fill_parent"
        android:layout_below="@+id/pass_layout"
        android:id="@+id/confirm_pass"
        android:orientation="horizontal">
        <TextView
             android:layout_height="wrap_content"
             android:layout_width="60dp"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
             android:text="@string/confirm_passwd"
             android:textSize="14sp"
             android:textColor="@color/black"
             android:textStyle="bold"
             />
        <EditText 
		    android:id="@+id/reg_confirm_passwd_edit"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@color/gray"
		    android:textSize="15sp"
		    android:inputType="textPassword"
		    android:layout_marginTop="15dp"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:singleLine="true"
		    android:background="@drawable/login_editbox"
		    android:hint="@string/reg_text"/>
    </LinearLayout>
    <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/confirm_pass"
	    >
	    <Button
	        android:id="@+id/help" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="23dp"
	        android:layout_marginTop="5dp"
	        android:text="@string/help_text"
	        android:textSize="16sp"
	        android:textColor="#00f"
	        android:background="#0000"
	        />
	     <Button
	        android:id="@+id/reg_btn"
	        android:layout_width="90dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="20dp"
	        android:layout_alignParentRight="true"
	        android:text="@string/reg"
	        android:background="@drawable/btn_style_green"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        />
	</RelativeLayout>
</RelativeLayout>